--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 
 
-        <section class="skilll">
+        <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
 
@@ -451,13 +451,13 @@
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Front end development</h5>
                 <div class="skills">
-                  <span class="skill">HTML 5</span>
-                  <span class="skill">CSS 3</span>
-                  <span class="skill">Bootstrap</span>
-                  <span class="skill">TailwindCss</span>
-                  <span class="skill">React.js</span>
-                  <span class="skill">Anglar.js</span>
-                  <span class="skill">R W D</span>
+                  <span class="myskill">HTML 5</span>
+                  <span class="myskill">CSS 3</span>
+                  <span class="myskill">Bootstrap</span>
+                  <span class="myskill">TailwindCss</span>
+                  <span class="myskill">React.js</span>
+                  <span class="myskill">Anglar.js</span>
+                  <span class="myskill">R W D</span>
                 </div>
                 <data value="80">80%</data>
               </div>
@@ -465,6 +465,7 @@
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
+              <div class="separator"></div>
 
             </li>
 
@@ -473,8 +474,8 @@
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Programming Languages</h5>
                 <div class="skills">
-                  <span class="skill">JavaScript</span>
-                  <span class="skill">TypeScript</span>
+                  <span class="myskill">JavaScript</span>
+                  <span class="myskill">TypeScript</span>
                 </div>
                 <data value="70">70%</data>
               </div>
@@ -482,6 +483,7 @@
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
+              <div class="separator"></div>
 
             </li>
 
@@ -490,10 +492,10 @@
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Back end development</h5>
                 <div class="skills">
-                  <span class="skill">Node.js</span>
-                  <span class="skill">Express.js</span>
-                  <span class="skill">MongoDB</span>
-                  <span class="skill">SQL</span>
+                  <span class="myskill">Node.js</span>
+                  <span class="myskill">Express.js</span>
+                  <span class="myskill">MongoDB</span>
+                  <span class="myskill">SQL</span>
                 </div>
                 <data value="60">60%</data>
               </div>
@@ -501,6 +503,7 @@
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 60%;"></div>
               </div>
+              <div class="separator"></div>
 
             </li>
 
@@ -509,14 +512,14 @@
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">CMS</h5>
                 <div class="skills">
-                  <span class="skill">WordPress</span>
-                  <span class="skill">Elementor</span>
-                  <span class="skill">Plugins</span>
-                  <span class="skill">Themes</span>
-                  <span class="skill">WooCommerce</span>
-                  <span class="skill">Wix</span>
-                  <span class="skill">Shopify</span>
-                  <span class="skill">Salla</span>
+                  <span class="myskill">WordPress</span>
+                  <span class="myskill">Elementor</span>
+                  <span class="myskill">Plugins</span>
+                  <span class="myskill">Themes</span>
+                  <span class="myskill">WooCommerce</span>
+                  <span class="myskill">Wix</span>
+                  <span class="myskill">Shopify</span>
+                  <span class="myskill">Salla</span>
                 </div>
 
                 <data value="80">80%</data>
@@ -526,6 +529,7 @@
                 <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 
+              <div class="separator"></div>
 
             </li>
             
@@ -534,9 +538,9 @@
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Networks</h5>
                 <div class="skills">
-                  <span class="skill">CCNA</span>
-                  <span class="skill">MCSA</span>
-                  <span class="skill">REDHAT</span>
+                  <span class="myskill">CCNA</span>
+                  <span class="myskill">MCSA</span>
+                  <span class="myskill">REDHAT</span>
                 </div>
                 <data value="75">75%</data>
               </div>
@@ -546,19 +550,20 @@
               </div>
 
             </li>
+            <div class="separator"></div>
 
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Extras</h5>
                 <div class="skills">
-                  <span class="skill">Design Patterns</span>
-                  <span class="skill">OOP</span>
-                  <span class="skill">Linux</span>
-                  <span class="skill">Git</span>
-                  <span class="skill">Github</span>
-                  <span class="skill">Hosting</span>
-                  <span class="skill">Deployment</span>
+                  <span class="myskill">Design Patterns</span>
+                  <span class="myskill">OOP</span>
+                  <span class="myskill">Linux</span>
+                  <span class="myskill">Git</span>
+                  <span class="myskill">Github</span>
+                  <span class="myskill">Hosting</span>
+                  <span class="myskill">Deployment</span>
                 </div>
                 <data value="70">70%</data>
               </div>
