--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <p class="contact-title">Email</p>
 
               <a href="mailto:muhammedabdelhamidmuhammed@gmail.com
-              " class="contact-link">muhammedabdelhamidmuhammed@gmail.com
+              " class="contact-link">muhammedabdelhamid
               </a>
             </div>
 
@@ -1141,16 +1141,17 @@
           <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
+              <input type="text" name="fullname" class="form-input" placeholder="Full name"  data-form-input>
 
-              <input type="email" name="email" class="form-input" placeholder="Email address" required data-form-input>
+              <input type="email" name="email" class="form-input" placeholder="Email address"  data-form-input>
             </div>
 
-            <textarea name="message" class="form-input" placeholder="Your Message" required data-form-input></textarea>
+            <textarea name="message" class="form-input" placeholder="Your Message"  data-form-input></textarea>
 
             <button class="form-btn" type="submit" data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
+              <a href="https://wa.me/+201055846750"><span style="color: aliceblue;">Send Message</span></a>
+              
             </button>
 
           </form>
