--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/2.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/2.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Drippin-eg Ecommerce</h3>
@@ -685,7 +685,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/4.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/4.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">kaldn E-commerce</h3>
@@ -703,7 +703,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/3.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/3.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ICEJCOM Communication Agency</h3>
@@ -721,7 +721,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/1.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/1.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">TepTac Services</h3>
@@ -739,7 +739,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/8.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/8.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Brainusey Agency</h3>
@@ -757,7 +757,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/6.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/design/6.webp" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ReactJs Movies Website</h3>
@@ -775,7 +775,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/5.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/5.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Ebdaa for Interior Designs</h3>
@@ -793,7 +793,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/7.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/design/7.webp" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Walmart Clone</h3>
@@ -811,7 +811,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/9.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/design/9.webp" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Walmart Dashbord Using Angular.js</h3>
@@ -829,7 +829,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/design/10.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/10.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Grand Caffe System</h3>
@@ -847,7 +847,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/uberStore.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/uberStore.webp" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Uber Store WordPress</h3>
@@ -867,7 +867,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/HTML5 & Bootsrap.png" alt="fundo" loading="lazy">
+                  <img src="./assets/images/HTML5 & Bootsrap.webp" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">HTML5 & Bootsrap.png</h3>
@@ -885,7 +885,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/landingPage_HTML5 &TailwendCSS.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/landingPage_HTML5 &TailwendCSS.webp" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">landing Page HTML5 & TailwendCSS</h3>
@@ -903,7 +903,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/LandingPage1.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/LandingPage1.webp" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Landing Page</h3>
