--- a/index.html
+++ b/index.html
@@ -369,25 +369,48 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
+              <h4 class="h4 timeline-item-title">Teptac services</h4>
 
-              <span>04/2024 — Present</span>
+              <span>06/2024 — Present</span>
 
               <p class="timeline-text">
-              Web Developer
+                Wordpress Developer , Part-time
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Information Technology Institute (ITI) - Ministry of Communications and
-                Information Technology (MCIT)</h4>
+              <h4 class="h4 timeline-item-title">Icej Communication</h4>
+
+              <span>05/2024 — Present</span>
+
+              <p class="timeline-text">
+                Wordpress Developer , Part-time
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
+
+              <span>04/2024 — Present</span>
+
+              <p class="timeline-text">
+              Web Developer , Full-time
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Information Technology Institute (ITI)</h4>
 
               <span>11/2023 – 04/2024</span>
 
               <p class="timeline-text">
-                Intensive Code Camp (ICC) - Full Stack Web Development using MEARN.
+                Full Stack Web Development using MEARN.
               </p>
 
             </li>
