--- a/index.html
+++ b/index.html
@@ -369,9 +369,21 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Raqamia</h4>
+
+              <span>03/2025 — persent</span>
+
+              <p class="timeline-text">
+              Web Developer , Full-time
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Teptac services</h4>
 
-              <span>06/2024 — Present</span>
+              <span>06/2024 — 01/2025</span>
 
               <p class="timeline-text">
                 Wordpress Developer , Part-time
@@ -383,7 +395,7 @@
 
               <h4 class="h4 timeline-item-title">Icej Communication</h4>
 
-              <span>05/2024 — Present</span>
+              <span>05/2024 — 12/2024</span>
 
               <p class="timeline-text">
                 Wordpress Developer , Part-time
@@ -395,7 +407,7 @@
 
               <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
 
-              <span>04/2024 — Present</span>
+              <span>04/2024 — 03/2025</span>
 
               <p class="timeline-text">
               Web Developer , Full-time
