--- a/index.html
+++ b/index.html
@@ -367,11 +367,22 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+<!--             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Raqamia</h4>
 
-              <span>03/2025 — persent</span>
+              <span>01/2025 — persent</span>
+
+              <p class="timeline-text">
+              Web Developer , Full-time
+              </p>
+
+            </li> -->
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Digitopia Agency</h4>
+
+              <span>02/2025 — persent</span>
 
               <p class="timeline-text">
               Web Developer , Full-time
@@ -379,7 +390,7 @@
 
             </li>
 
-            <li class="timeline-item">
+<!--             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Teptac services</h4>
 
@@ -401,13 +412,13 @@
                 Wordpress Developer , Part-time
               </p>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
 
-              <span>04/2024 — 03/2025</span>
+              <span>09/2024 — 02/2025</span>
 
               <p class="timeline-text">
               Web Developer , Full-time
