--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
 
           </ul>
           <br>
-          <button class="form-btn" type="submit" data-form-btn>
+<!--           <button class="form-btn" type="submit" data-form-btn>
             <a href="/assets//MuhammedAbdelhamedResume.pdf" download="/assets/MuhammedAbdelhamedResume.pdf" style="color: beige;">Download Resume</a>
-          </button>
+          </button> -->
 
           
         </section>
