--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+201055846750" class="contact-link">+20 105 584 6750</a>
+              <a href="tel:+201055846750" class="contact-link">+20 102 223 9693</a>
             </div>
 
           </li>
@@ -131,7 +131,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://wa.me/+201055846750" class="social-link">
+            <a href="https://wa.me/+201022239693" class="social-link">
               <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
           </li>
@@ -197,10 +197,10 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-<!-- 
+
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
-          </li> -->
+          </li>
 
           <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
@@ -230,12 +230,12 @@
 
         <section class="about-text">
           <p>
-            A highly motivated and detail-oriented Full-Stack Developer specializing in the MEARN stack and WordPress
-            development. With extensive experience in building scalable, user-friendly web applications and custom
-            WordPress solutions, I possess a unique combination of technical expertise and creative problem-solving
-            skills. Adept at delivering high-quality, responsive designs and optimized backend systems, I am passionate
-            about crafting seamless digital experiences that align with client goals. Proven track record of completing
-            projects on time and exceeding expectations in both individual and collaborative settings.
+             Full-Stack Web Developer with strong expertise in WordPress development, Elementor, and WooCommerce. 
+Proficient in building custom themes, plugins, and responsive websites optimized for SEO, Core Web Vitals, 
+and cross-browser compatibility. Experienced in the MERN stack (MongoDB, Express.js, React.js, Node.js), 
+integrating RESTful APIs, and applying agile methodologies. Delivered over 75 successful web projects with a 
+focus on performance, UX/UI best practices, and scalable architecture. Adept at working independently in 
+remote teams, using tools like Git, GitHub, and CI/CD pipelines to deliver high-quality digital solutions.
             
           </p>
 
@@ -390,7 +390,7 @@
 
             </li>
 
-<!--             <li class="timeline-item">
+            <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Teptac services</h4>
 
@@ -412,7 +412,7 @@
                 Wordpress Developer , Part-time
               </p>
 
-            </li> -->
+            </li>
 
             <li class="timeline-item">
 
@@ -722,8 +722,78 @@
 
               </a>
             </li>
-
             <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://www.shawarmani.com.au/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot 2025-11-06 145232.webp" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Shawarmani</h3>
+
+                <p class="project-category">Wordpress - Elementor </p>
+
+              </a>
+            </li>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://dayrabathrooms.dreamhosters.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot 2025-11-06 145254.webp" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Dayra Bathrooms</h3>
+
+                <p class="project-category">Wordpress - Elementor </p>
+
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://bellepropertymawsonlakes.com.au/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot 2025-11-06 145214.webp" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Belleproperty</h3>
+
+                <p class="project-category">Wordpress - Elementor </p>
+
+              </a>
+            </li>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://jumonique.dreamhosters.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Screenshot 2025-11-06 145314.webp" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Jumonique</h3>
+
+                <p class="project-category">Wordpress - Elementor </p>
+
+              </a>
+            </li>
+
+            <!-- <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https://kaldn.com/">
 
                 <figure class="project-img">
@@ -739,7 +809,7 @@
                 <p class="project-category">Elementor - Wordpress - Payment Method Integration</p>
 
               </a>
-            </li>
+            </li> -->
 
             <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https://icejcom.com/">
@@ -759,7 +829,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="wordpress">
+            <!-- <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https://teptac.com/">
 
                 <figure class="project-img">
@@ -775,7 +845,7 @@
                 <p class="project-category">Elementor Pro Builder</p>
 
               </a>
-            </li>
+            </li> -->
 
             <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https://brainusey.com/">
@@ -812,7 +882,7 @@
 
               </a>
             </li>
-
+<!-- 
             <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https://ebdaa.io/">
 
@@ -829,7 +899,7 @@
                 <p class="project-category">Elementor Pro Builder</p>
 
               </a>
-            </li>
+            </li> -->
                         
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://graduation-project-walmart-clone.vercel.app/">
